contrast errors fix

--- a/src/styling/_06-c-btn.scss
+++ b/src/styling/_06-c-btn.scss
@@ -220,8 +220,8 @@
 }
 
 .c-btn--Next {
-  background-color: #4484A6;
-  color: white;
+  background-color: #2B2B2B;
+  color: #BDBDBD;
 }
 
 
