--- a/src/styling/_06-c-feature.scss
+++ b/src/styling/_06-c-feature.scss
@@ -200,7 +200,7 @@
 }
 
 .c-feature__label input[type="radio"]:checked ~ .c-feature__label-text {
-	color: white;
+	color: #595959;
 	font-family: 'boschsans-bold';
 }
 
